<resources>
    <string name="app_name">ShapeCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main menu</string>
    <string name="second_fragment_label">Shape Selection</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- shape names as strings -->
    <string name="shape_triangle">Triangle</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_square">Square</string>
    <string name="shape_rectangle">Rectangle</string>
    <string name="shape_parallelogram">Parallelogram</string>
    <string name="shape_trapezium">Trapezium</string>

    <string-array name="shapes">
        <item>@string/shape_triangle</item>
        <item>@string/shape_circle</item>
        <item>@string/shape_square</item>
        <item>@string/shape_rectangle</item>
        <item>@string/shape_parallelogram</item>
        <item>@string/shape_trapezium</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_message">Welcome to the Shape Calculator app. Tap the \'Next\' button to select a shape out of list. Then tap \'Next\' again to put the dimensions for a selected shape. After you\'ve put the dimensions into text boxes, tap \'Calculate\' button. You\'ll get the area and/or perimeter as a result. Feel free to try it out!</string>
    <string name="return_message">Back to main menu</string>
    <string name="shape_list">List of the shapes</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_calculation_result">CalculationResultActivity</string>
    <string name="title_activity_calculation">CalculationActivity</string>
    <string name="radius">Put the radius length here</string>
    <string name="calculate">Calculate</string>
    <string name="base_length">Put the base length here</string>
    <string name="shape_height">Put the shape height here</string>
    <string name="input_shape_length">Put the shape length here</string>
    <string name="input_shape_breadth">Put the shape breadth here</string>
    <string name="input_square_side">Put the square side here</string>
    <string name="input_trapezium_top_length">Put the top length here</string>
    <string name="input_trapezium_bottom_length">Put the bottom length here</string>
</resources>