<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/return_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/shapesRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/shape_list"
            app:layout_constraintBottom_toTopOf="@id/checkboxResultRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_second">

            <RadioButton
                android:id="@+id/radioButtonTriangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_triangle" />

            <RadioButton
                android:id="@+id/radioButtonCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_circle" />

            <RadioButton
                android:id="@+id/radioButtonSquare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_square" />

            <RadioButton
                android:id="@+id/radioButtonRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_rectangle" />

            <RadioButton
                android:id="@+id/radioButtonParallelogram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_parallelogram" />

            <RadioButton
                android:id="@+id/radioButtonTrapezium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape_trapezium" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/checkboxResultRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@id/selectedShapeNextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shapesRadioGroup">

        <CheckBox
            android:id="@+id/checkboxArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/area" />

        <CheckBox
            android:id="@+id/checkboxPerimeter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/perimeter" />
        </RadioGroup>

        <Button
            android:id="@+id/selectedShapeNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>